--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="stat__item confirmedul col">
 						<h5 class="card-title text-uppercase text-muted">
 							Total Cases<br />
-							<h5 style="color: #ff073a;"></h5>
+							<h5 style="color: #ff073a;">एकूण बाधित रुग्ण</h5>
 						</h5>
 						<span class="number h2 font-weight-bold total color-red count"
 							>🔃</span
@@ -49,7 +49,7 @@
 						<div class="col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #ff073a;"></h5>
+								<h5 style="color: #ff073a;">आजचे  रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
@@ -64,7 +64,7 @@
 					<div class="stat__item activeul col">
 						<h5 class="card-title text-uppercase text-muted">
 							Active Cases<br />
-							<h5 style="color: #007bff;"></h5>
+							<h5 style="color: #007bff;">रुग्णालयात दाखल </h5>
 						</h5>
 						<span class="number h2 font-weight-bold total color-blue count"
 							>🔃</span
@@ -87,7 +87,7 @@
 					<div class="stat__item recoveredul col">
 						<h5 class="card-title text-uppercase text-muted">
 							Recovered Cases<br />
-							<h5 style="color: #28a745;"></h5>
+							<h5 style="color: #28a745;">बरे झालेले रुग्ण</h5>
 						</h5>
 						<span class="number h2 font-weight-bold total color-green count"
 							>🔃</span
@@ -110,7 +110,7 @@
 						<div class="stat__item recoveredul col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #28a745;"></h5>
+								<h5 style="color: #28a745;">आजचे  रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
@@ -125,7 +125,7 @@
 					<div class="stat__item deceasedul col">
 						<h5 class="card-title text-uppercase text-muted">
 							Deceased Cases<br />
-							<h5 style="color: #6c757d;"></h5>
+							<h5 style="color: #6c757d;">मृत्यू झालेले रुग्ण</h5>
 						</h5>
 						<span class="number h2 font-weight-bold total color-orange count"
 							>🔃</span
@@ -149,7 +149,7 @@
 						<div class="stat__item deceasedul col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #6c757d;"></h5>
+								<h5 style="color: #6c757d;">आजचे  रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
