--- a/index.html
+++ b/index.html
@@ -16,10 +16,21 @@
 		<link rel="stylesheet" href="./assets/styles.css" />
 	</head>
 
-	<body style="width: auto;">
-		<h1 class="title" style="margin-top: 0px; margin-bottom: 0px;">
-			ULHASNAGAR COVID-19
-		</h1>
+	<body>
+		<div id="mySidebar" class="sidebar">
+			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+			<!-- <a href="./index.html">Ulhasnagar</a> -->
+			<a href="./amb.html">Ambernath</a>
+			<a href="./bad.html">Badlapur</a>
+			<a href="./kdmc.html">KDMC</a>
+			<!-- <a href="#">Contact</a> -->
+		</div>
+		<div id="main">
+			<button class="openbtn" onclick="openNav()">☰</button>
+			<h1 class="title" style="margin-top: 2%; margin-bottom: 0px;">
+				ULHASNAGAR COVID-19
+			</h1>
+		</div>
 		<div class="container">
 			<!-- Card stats -->
 
@@ -49,7 +60,7 @@
 						<div class="col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #ff073a;">आजचे  रुग्ण</h5>
+								<h5 style="color: #ff073a;">आजचे रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
@@ -64,7 +75,7 @@
 					<div class="stat__item activeul col">
 						<h5 class="card-title text-uppercase text-muted">
 							Active Cases<br />
-							<h5 style="color: #007bff;">रुग्णालयात दाखल </h5>
+							<h5 style="color: #007bff;">रुग्णालयात दाखल</h5>
 						</h5>
 						<span class="number h2 font-weight-bold total color-blue count"
 							>🔃</span
@@ -110,7 +121,7 @@
 						<div class="stat__item recoveredul col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #28a745;">आजचे  रुग्ण</h5>
+								<h5 style="color: #28a745;">आजचे रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
@@ -149,7 +160,7 @@
 						<div class="stat__item deceasedul col">
 							<h5 class="card-title text-uppercase text-muted">
 								Today's Cases<br />
-								<h5 style="color: #6c757d;">आजचे  रुग्ण</h5>
+								<h5 style="color: #6c757d;">आजचे रुग्ण</h5>
 							</h5>
 						</div>
 						<span class="new h1 font-weight-bold oldtotal color-red count"
@@ -166,5 +177,17 @@
 			</p>
 		</div>
 		<script src="./assets/ul.js"></script>
+		<script>
+			function openNav() {
+				document.getElementById("mySidebar").style.width = "100%";
+				document.getElementById("mySidebar").style.textAlign = "center";
+				document.getElementById("main").style.marginLeft = "250px";
+			}
+
+			function closeNav() {
+				document.getElementById("mySidebar").style.width = "0";
+				document.getElementById("main").style.marginLeft = "0";
+			}
+		</script>
 	</body>
 </html>
