--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		/>
 		<link
 			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<link
+			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
 		/>
 		<link rel="stylesheet" href="./assets/styles.css" />
@@ -19,17 +23,15 @@
 	<body>
 		<div id="mySidebar" class="sidebar">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-			<!-- <a href="./index.html">Ulhasnagar</a> -->
 			<a href="./amb.html">Ambernath</a>
 			<a href="./bad.html">Badlapur</a>
 			<a href="./kdmc.html">KDMC</a>
-			<!-- <a href="#">Contact</a> -->
 		</div>
-		<div id="main">
-			<button class="openbtn" onclick="openNav()">☰</button>
-			<h1 class="title" style="margin-top: 2%; margin-bottom: 0px;">
-				ULHASNAGAR COVID-19
-			</h1>
+		<div class="topnav">
+			<a href="javascript:void(0);" class="icon" onclick="openNav()">
+				<i class="fa fa-bars"></i>
+			</a>
+			<a href="./index.html" class="active">ULHASNAGAR COVID-19</a>
 		</div>
 		<div class="container">
 			<!-- Card stats -->
