--- a/kdmc.html
+++ b/kdmc.html
@@ -25,11 +25,11 @@
 			<!-- <a href="./kdmc.html">KDMC</a> -->
 			<!-- <a href="#">Contact</a> -->
 		</div>
-		<div id="main">
-			<button class="openbtn" onclick="openNav()">☰</button>
-			<h1 class="title" style="margin-top: 0px; margin-bottom: 0px;">
-				KALYAN DOMBIVLI COVID-19
-			</h1>
+		<div class="topnav">
+			<a href="./index.html" class="active">KALYAN DOMBIVLI COVID-19</a>
+			<a href="javascript:void(0);" class="icon" onclick="openNav()">
+				<i class="fa fa-bars"></i>
+			</a>
 		</div>
 		<div class="container">
 			<!-- Card stats -->
